src/object/elf/edelf/src/STABPARSER/y.output

state 0
	$accept : _stabstring $end 

	NAME  shift 2
	:  shift 3
	.  error

	stabstring  goto 1

state 1
	$accept :  stabstring_$end 

	$end  accept
	.  error


state 2
	stabstring :  NAME_: class 

	:  shift 4
	.  error


state 3
	stabstring :  :_class 

	INTEGER  shift 38
	c  shift 6
	r  shift 23
	C  shift 17
	S  shift 25
	t  shift 12
	T  shift 13
	a  shift 14
	p  shift 15
	v  shift 16
	D  shift 18
	R  shift 19
	d  shift 22
	G  shift 24
	V  shift 26
	Y  shift 27
	Z  shift 28
	L  shift 29
	f  shift 30
	g  shift 31
	m  shift 32
	J  shift 33
	F  shift 34
	I  shift 35
	P  shift 36
	Q  shift 37
	(  shift 39
	.  error

	class  goto 5
	namedtype  goto 7
	parameter  goto 8
	procedure  goto 9
	variable  goto 10
	label  goto 11
	typeid  goto 21
	proc  goto 20

state 4
	stabstring :  NAME :_class 

	INTEGER  shift 38
	c  shift 6
	r  shift 23
	C  shift 17
	S  shift 25
	t  shift 12
	T  shift 13
	a  shift 14
	p  shift 15
	v  shift 16
	D  shift 18
	R  shift 19
	d  shift 22
	G  shift 24
	V  shift 26
	Y  shift 27
	Z  shift 28
	L  shift 29
	f  shift 30
	g  shift 31
	m  shift 32
	J  shift 33
	F  shift 34
	I  shift 35
	P  shift 36
	Q  shift 37
	(  shift 39
	.  error

	class  goto 40
	namedtype  goto 7
	parameter  goto 8
	procedure  goto 9
	variable  goto 10
	label  goto 11
	typeid  goto 21
	proc  goto 20

state 5
	stabstring :  : class_    (2)

	.  reduce 2


state 6
	class :  c_= constant ; 

	=  shift 41
	.  error


state 7
	class :  namedtype_    (4)

	.  reduce 4


state 8
	class :  parameter_    (5)

	.  reduce 5


state 9
	class :  procedure_    (6)

	.  reduce 6


state 10
	class :  variable_    (7)

	.  reduce 7


state 11
	class :  label_    (8)

	.  reduce 8


state 12
	namedtype :  t_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 42

state 13
	namedtype :  T_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 43

state 14
	parameter :  a_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 44

state 15
	parameter :  p_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 45

state 16
	parameter :  v_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 46

state 17
	parameter :  C_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 47

state 18
	parameter :  D_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 48

state 19
	parameter :  R_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 49

state 20
	procedure :  proc_    (30)
	procedure :  proc_, NAME : NAME 

	,  shift 50
	.  reduce 30


state 21
	variable :  typeid_    (32)

	.  reduce 32


state 22
	variable :  d_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 51

state 23
	variable :  r_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 52

state 24
	variable :  G_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 53

state 25
	variable :  S_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 54

state 26
	variable :  V_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 55

state 27
	variable :  Y_    (38)

	.  reduce 38


state 28
	variable :  Z_typeid NAME 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 56

state 29
	label :  L_    (40)

	.  reduce 40


state 30
	proc :  f_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 57

state 31
	proc :  g_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 58

state 32
	proc :  m_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 59

state 33
	proc :  J_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 60

state 34
	proc :  F_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 61

state 35
	proc :  I_    (46)

	.  reduce 46


state 36
	proc :  P_    (47)

	.  reduce 47


state 37
	proc :  Q_    (48)

	.  reduce 48


state 38
	typeid :  INTEGER_    (49)
	typeid :  INTEGER_= typedef 
	typeid :  INTEGER_typeattrs typedef 

	=  shift 62
	@  shift 64
	.  reduce 49

	typeattrs  goto 63

state 39
	typeid :  (_INTEGER , INTEGER ) 
	typeid :  (_INTEGER , INTEGER ) = typedef 
	typeid :  (_INTEGER , INTEGER ) typeattrs typedef 

	INTEGER  shift 65
	.  error


state 40
	stabstring :  NAME : class_    (1)

	.  reduce 1


state 41
	class :  c =_constant ; 

	c  shift 68
	b  shift 67
	e  shift 69
	i  shift 70
	r  shift 71
	s  shift 72
	C  shift 73
	S  shift 74
	.  error

	constant  goto 66

state 42
	namedtype :  t typeid_    (22)

	.  reduce 22


state 43
	namedtype :  T typeid_    (23)

	.  reduce 23


state 44
	parameter :  a typeid_    (24)

	.  reduce 24


state 45
	parameter :  p typeid_    (25)

	.  reduce 25


state 46
	parameter :  v typeid_    (26)

	.  reduce 26


state 47
	parameter :  C typeid_    (27)

	.  reduce 27


state 48
	parameter :  D typeid_    (28)

	.  reduce 28


state 49
	parameter :  R typeid_    (29)

	.  reduce 29


state 50
	procedure :  proc ,_NAME : NAME 

	NAME  shift 75
	.  error


state 51
	variable :  d typeid_    (33)

	.  reduce 33


state 52
	variable :  r typeid_    (34)

	.  reduce 34


state 53
	variable :  G typeid_    (35)

	.  reduce 35


state 54
	variable :  S typeid_    (36)

	.  reduce 36


state 55
	variable :  V typeid_    (37)

	.  reduce 37


state 56
	variable :  Z typeid_NAME 

	NAME  shift 76
	.  error


state 57
	proc :  f typeid_    (41)

	.  reduce 41


state 58
	proc :  g typeid_    (42)

	.  reduce 42


state 59
	proc :  m typeid_    (43)

	.  reduce 43


state 60
	proc :  J typeid_    (44)

	.  reduce 44


state 61
	proc :  F typeid_    (45)

	.  reduce 45


state 62
	typeid :  INTEGER =_typedef 

	INTEGER  shift 78
	c  shift 80
	b  shift 79
	e  shift 82
	i  shift 84
	r  shift 112
	s  shift 117
	C  shift 92
	S  shift 97
	a  shift 106
	p  shift 114
	v  shift 119
	D  shift 108
	R  shift 115
	d  shift 81
	G  shift 121
	V  shift 100
	Y  shift 120
	Z  shift 101
	f  shift 113
	g  shift 83
	m  shift 87
	F  shift 116
	I  shift 93
	P  shift 111
	k  shift 85
	l  shift 86
	n  shift 88
	o  shift 89
	w  shift 90
	z  shift 91
	K  shift 94
	M  shift 95
	N  shift 96
	*  shift 98
	&  shift 99
	A  shift 107
	E  shift 109
	O  shift 110
	u  shift 118
	.  error

	typedef  goto 77
	array  goto 102
	subrange  goto 103
	proceduretype  goto 104
	record  goto 105

state 63
	typeid :  INTEGER typeattrs_typedef 

	INTEGER  shift 78
	c  shift 80
	b  shift 79
	e  shift 82
	i  shift 84
	r  shift 112
	s  shift 117
	C  shift 92
	S  shift 97
	a  shift 106
	p  shift 114
	v  shift 119
	D  shift 108
	R  shift 115
	d  shift 81
	G  shift 121
	V  shift 100
	Y  shift 120
	Z  shift 101
	f  shift 113
	g  shift 83
	m  shift 87
	F  shift 116
	I  shift 93
	P  shift 111
	k  shift 85
	l  shift 86
	n  shift 88
	o  shift 89
	w  shift 90
	z  shift 91
	K  shift 94
	M  shift 95
	N  shift 96
	*  shift 98
	&  shift 99
	A  shift 107
	E  shift 109
	O  shift 110
	u  shift 118
	.  error

	typedef  goto 122
	array  goto 102
	subrange  goto 103
	proceduretype  goto 104
	record  goto 105

state 64
	typeattrs :  @_typeattrlist ; 

	error  shift 129
	s  shift 126
	a  shift 125
	p  shift 127
	P  shift 128
	.  error

	typeattrlist  goto 123
	typeattr  goto 124

state 65
	typeid :  ( INTEGER_, INTEGER ) 
	typeid :  ( INTEGER_, INTEGER ) = typedef 
	typeid :  ( INTEGER_, INTEGER ) typeattrs typedef 

	,  shift 130
	.  error


state 66
	class :  c = constant_; 

	;  shift 131
	.  error


state 67
	constant :  b_ordvalue 

	INTEGER  shift 133
	.  error

	ordvalue  goto 132

state 68
	constant :  c_ordvalue 

	INTEGER  shift 133
	.  error

	ordvalue  goto 134

state 69
	constant :  e_typeid , ordvalue 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 135

state 70
	constant :  i_INTEGER 

	INTEGER  shift 136
	.  error


state 71
	constant :  r_REAL 

	REAL  shift 137
	.  error


state 72
	constant :  s_STRING 

	STRING  shift 138
	.  error


state 73
	constant :  C_REAL , REAL 

	REAL  shift 139
	.  error


state 74
	constant :  S_typeid , numelements , numbits , bitpattern 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 140

state 75
	procedure :  proc , NAME_: NAME 

	:  shift 141
	.  error


state 76
	variable :  Z typeid NAME_    (39)

	.  reduce 39


state 77
	typeid :  INTEGER = typedef_    (50)

	.  reduce 50


state 78
	typedef :  INTEGER_    (63)

	.  reduce 63


state 79
	typedef :  b_typeid ; # numbytes 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 142

state 80
	typedef :  c_typeid ; # numbits 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 143

state 81
	typedef :  d_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 144

state 82
	typedef :  e_enumspec ; 

	INTEGER  shift 38
	NAME  shift 149
	(  shift 39
	.  error

	typeid  goto 147
	enumspec  goto 145
	enumlist  goto 146
	enum  goto 148

state 83
	typedef :  g_typeid ; # numbits 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 150

state 84
	typedef :  i_NAME : NAME ; 
	typedef :  i_NAME : NAME , typeid ; 

	NAME  shift 151
	.  error


state 85
	typedef :  k_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 152

state 86
	typedef :  l_; # 

	;  shift 153
	.  error


state 87
	typedef :  m_optvbasespec optmultibasespec typeid : typeid : typeid ; 
	optvbasespec : _    (136)

	v  shift 155
	.  reduce 136

	optvbasespec  goto 154

state 88
	typedef :  n_typeid ; # numbytes 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 156

state 89
	typedef :  o_NAME ; 
	typedef :  o_NAME , typeid 

	NAME  shift 157
	.  error


state 90
	typedef :  w_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 158

state 91
	typedef :  z_typeid ; # numbytes 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 159

state 92
	typedef :  C_usage 

	c  shift 165
	b  shift 164
	e  shift 167
	i  shift 171
	r  shift 180
	s  shift 181
	t  shift 182
	a  shift 163
	p  shift 178
	d  shift 166
	f  shift 168
	g  shift 169
	m  shift 175
	k  shift 173
	l  shift 174
	n  shift 176
	o  shift 177
	h  shift 170
	j  shift 172
	q  shift 179
	.  error

	usage  goto 160
	redefinition  goto 162
	picstoragetype  goto 161

state 93
	typedef :  I_numbytes ; # picsize 

	INTEGER  shift 184
	.  error

	numbytes  goto 183

state 94
	typedef :  K_cobolfiledesc ; 

	i  shift 187
	r  shift 189
	s  shift 190
	l  shift 188
	.  error

	cobolfiledesc  goto 185
	organization  goto 186

state 95
	typedef :  M_typeid ; # bound 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 191

state 96
	typedef :  N_    (83)

	.  reduce 83


state 97
	typedef :  S_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 192

state 98
	typedef :  *_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 193

state 99
	typedef :  &_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 194

state 100
	typedef :  V_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 195

state 101
	typedef :  Z_    (88)

	.  reduce 88


state 102
	typedef :  array_    (89)

	.  reduce 89


state 103
	typedef :  subrange_    (90)

	.  reduce 90


state 104
	typedef :  proceduretype_    (91)

	.  reduce 91


state 105
	typedef :  record_    (92)

	.  reduce 92


state 106
	array :  a_typeid ; # typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 196

state 107
	array :  A_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 197

state 108
	array :  D_INTEGER , typeid 

	INTEGER  shift 198
	.  error


state 109
	array :  E_INTEGER , typeid 

	INTEGER  shift 199
	.  error


state 110
	array :  O_INTEGER , typeid 

	INTEGER  shift 200
	.  error


state 111
	array :  P_typeid ; # typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 201

state 112
	subrange :  r_typeid ; # bound ; # bound 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 202

state 113
	proceduretype :  f_typeid ; 
	proceduretype :  f_typeid , numparams ; tparamlist ; 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 203

state 114
	proceduretype :  p_numparams ; tparamlist ; 

	INTEGER  shift 205
	.  error

	numparams  goto 204

state 115
	proceduretype :  R_numparams ; namedtparamlist 

	INTEGER  shift 205
	.  error

	numparams  goto 206

state 116
	proceduretype :  F_typeid , numparams ; namedtparamlist ; 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 207

state 117
	record :  s_numbytes # fieldlist ; 

	INTEGER  shift 184
	.  error

	numbytes  goto 208

state 118
	record :  u_numbytes # fieldlist ; 

	INTEGER  shift 184
	.  error

	numbytes  goto 209

state 119
	record :  v_numbytes # fieldlist variantpart ; 

	INTEGER  shift 184
	.  error

	numbytes  goto 210

state 120
	record :  Y_numbytes classkey optpbv optbasespeclist ( extendedfieldlist optnameresolutionlist ; 

	INTEGER  shift 184
	.  error

	numbytes  goto 211

state 121
	record :  G_redefinition , n numbits # fieldlist ; 
	record :  G_redefinition , c numbits # condfieldlist ; 
	record :  G_n numbits fieldlist ; 
	record :  G_c numbits condfieldlist ; 

	c  shift 214
	r  shift 215
	n  shift 213
	.  error

	redefinition  goto 212

state 122
	typeid :  INTEGER typeattrs typedef_    (51)

	.  reduce 51


state 123
	typeattrs :  @ typeattrlist_; 
	typeattrlist :  typeattrlist_; @ typeattr 

	;  shift 216
	.  error


state 124
	typeattrlist :  typeattr_    (57)

	.  reduce 57


state 125
	typeattr :  a_INTEGER 

	INTEGER  shift 217
	.  error


state 126
	typeattr :  s_INTEGER 

	INTEGER  shift 218
	.  error


state 127
	typeattr :  p_INTEGER 

	INTEGER  shift 219
	.  error


state 128
	typeattr :  P_    (61)

	.  reduce 61


state 129
	typeattr :  error_    (62)

	.  reduce 62


state 130
	typeid :  ( INTEGER ,_INTEGER ) 
	typeid :  ( INTEGER ,_INTEGER ) = typedef 
	typeid :  ( INTEGER ,_INTEGER ) typeattrs typedef 

	INTEGER  shift 220
	.  error


state 131
	class :  c = constant ;_    (3)

	.  reduce 3


state 132
	constant :  b ordvalue_    (9)

	.  reduce 9


state 133
	ordvalue :  INTEGER_    (17)

	.  reduce 17


state 134
	constant :  c ordvalue_    (10)

	.  reduce 10


state 135
	constant :  e typeid_, ordvalue 

	,  shift 221
	.  error


state 136
	constant :  i INTEGER_    (12)

	.  reduce 12


state 137
	constant :  r REAL_    (13)

	.  reduce 13


state 138
	constant :  s STRING_    (14)

	.  reduce 14


state 139
	constant :  C REAL_, REAL 

	,  shift 222
	.  error


state 140
	constant :  S typeid_, numelements , numbits , bitpattern 

	,  shift 223
	.  error


state 141
	procedure :  proc , NAME :_NAME 

	NAME  shift 224
	.  error


state 142
	typedef :  b typeid_; # numbytes 

	;  shift 225
	.  error


state 143
	typedef :  c typeid_; # numbits 

	;  shift 226
	.  error


state 144
	typedef :  d typeid_    (66)

	.  reduce 66


state 145
	typedef :  e enumspec_; 

	;  shift 227
	.  error


state 146
	enumspec :  enumlist_    (93)
	enumlist :  enumlist_enum 

	NAME  shift 149
	.  reduce 93

	enum  goto 228

state 147
	enumspec :  typeid_: enumlist 

	:  shift 229
	.  error


state 148
	enumlist :  enum_    (95)

	.  reduce 95


state 149
	enum :  NAME_: ordvalue , # 

	:  shift 230
	.  error


state 150
	typedef :  g typeid_; # numbits 

	;  shift 231
	.  error


state 151
	typedef :  i NAME_: NAME ; 
	typedef :  i NAME_: NAME , typeid ; 

	:  shift 232
	.  error


state 152
	typedef :  k typeid_    (71)

	.  reduce 71


state 153
	typedef :  l ;_# 

	#  shift 233
	.  error


state 154
	typedef :  m optvbasespec_optmultibasespec typeid : typeid : typeid ; 
	optmultibasespec : _    (138)

	m  shift 235
	.  reduce 138

	optmultibasespec  goto 234

state 155
	optvbasespec :  v_    (137)

	.  reduce 137


state 156
	typedef :  n typeid_; # numbytes 

	;  shift 236
	.  error


state 157
	typedef :  o NAME_; 
	typedef :  o NAME_, typeid 

	;  shift 237
	,  shift 238
	.  error


state 158
	typedef :  w typeid_    (77)

	.  reduce 77


state 159
	typedef :  z typeid_; # numbytes 

	;  shift 239
	.  error


state 160
	typedef :  C usage_    (79)

	.  reduce 79


state 161
	usage :  picstoragetype_numbits , editdescription , picsize ; 
	usage :  picstoragetype_numbits , editdescription , picsize , # condition ; 

	INTEGER  shift 241
	.  error

	numbits  goto 240

state 162
	usage :  redefinition_picstoragetype numbits , editdescription , picsize ; 
	usage :  redefinition_picstoragetype numbits , editdescription , picsize , # condition ; 

	c  shift 165
	b  shift 164
	e  shift 167
	i  shift 171
	r  shift 243
	s  shift 181
	t  shift 182
	a  shift 163
	p  shift 178
	d  shift 166
	f  shift 168
	g  shift 169
	m  shift 175
	k  shift 173
	l  shift 174
	n  shift 176
	o  shift 177
	h  shift 170
	j  shift 172
	q  shift 179
	.  error

	picstoragetype  goto 242

state 163
	picstoragetype :  a_    (233)

	.  reduce 233


state 164
	picstoragetype :  b_    (234)

	.  reduce 234


state 165
	picstoragetype :  c_    (235)

	.  reduce 235


state 166
	picstoragetype :  d_    (236)

	.  reduce 236


state 167
	picstoragetype :  e_    (237)

	.  reduce 237


state 168
	picstoragetype :  f_    (238)

	.  reduce 238


state 169
	picstoragetype :  g_    (239)

	.  reduce 239


state 170
	picstoragetype :  h_    (240)

	.  reduce 240


state 171
	picstoragetype :  i_    (241)

	.  reduce 241


state 172
	picstoragetype :  j_    (242)

	.  reduce 242


state 173
	picstoragetype :  k_    (243)

	.  reduce 243


state 174
	picstoragetype :  l_    (244)

	.  reduce 244


state 175
	picstoragetype :  m_    (245)

	.  reduce 245


state 176
	picstoragetype :  n_    (246)

	.  reduce 246


state 177
	picstoragetype :  o_    (247)

	.  reduce 247


state 178
	picstoragetype :  p_    (248)

	.  reduce 248


state 179
	picstoragetype :  q_    (249)

	.  reduce 249


state 180
	redefinition :  r_NAME 
	picstoragetype :  r_    (250)

	NAME  shift 244
	.  reduce 250


state 181
	picstoragetype :  s_    (251)

	.  reduce 251


state 182
	picstoragetype :  t_    (252)

	.  reduce 252


state 183
	typedef :  I numbytes_; # picsize 

	;  shift 245
	.  error


state 184
	numbytes :  INTEGER_    (20)

	.  reduce 20


state 185
	typedef :  K cobolfiledesc_; 

	;  shift 246
	.  error


state 186
	cobolfiledesc :  organization_accessmethod numbytes 

	r  shift 250
	s  shift 251
	d  shift 248
	o  shift 249
	.  error

	accessmethod  goto 247

state 187
	organization :  i_    (271)

	.  reduce 271


state 188
	organization :  l_    (272)

	.  reduce 272


state 189
	organization :  r_    (273)

	.  reduce 273


state 190
	organization :  s_    (274)

	.  reduce 274


state 191
	typedef :  M typeid_; # bound 

	;  shift 252
	.  error


state 192
	typedef :  S typeid_    (84)

	.  reduce 84


state 193
	typedef :  * typeid_    (85)

	.  reduce 85


state 194
	typedef :  & typeid_    (86)

	.  reduce 86


state 195
	typedef :  V typeid_    (87)

	.  reduce 87


state 196
	array :  a typeid_; # typeid 

	;  shift 253
	.  error


state 197
	array :  A typeid_    (99)

	.  reduce 99


state 198
	array :  D INTEGER_, typeid 

	,  shift 254
	.  error


state 199
	array :  E INTEGER_, typeid 

	,  shift 255
	.  error


state 200
	array :  O INTEGER_, typeid 

	,  shift 256
	.  error


state 201
	array :  P typeid_; # typeid 

	;  shift 257
	.  error


state 202
	subrange :  r typeid_; # bound ; # bound 

	;  shift 258
	.  error


state 203
	proceduretype :  f typeid_; 
	proceduretype :  f typeid_, numparams ; tparamlist ; 

	;  shift 259
	,  shift 260
	.  error


state 204
	proceduretype :  p numparams_; tparamlist ; 

	;  shift 261
	.  error


state 205
	numparams :  INTEGER_    (118)

	.  reduce 118


state 206
	proceduretype :  R numparams_; namedtparamlist 

	;  shift 262
	.  error


state 207
	proceduretype :  F typeid_, numparams ; namedtparamlist ; 

	,  shift 263
	.  error


state 208
	record :  s numbytes_# fieldlist ; 

	#  shift 264
	.  error


state 209
	record :  u numbytes_# fieldlist ; 

	#  shift 265
	.  error


state 210
	record :  v numbytes_# fieldlist variantpart ; 

	#  shift 266
	.  error


state 211
	record :  Y numbytes_classkey optpbv optbasespeclist ( extendedfieldlist optnameresolutionlist ; 

	c  shift 270
	s  shift 268
	u  shift 269
	.  error

	classkey  goto 267

state 212
	record :  G redefinition_, n numbits # fieldlist ; 
	record :  G redefinition_, c numbits # condfieldlist ; 

	,  shift 271
	.  error


state 213
	record :  G n_numbits fieldlist ; 

	INTEGER  shift 241
	.  error

	numbits  goto 272

state 214
	record :  G c_numbits condfieldlist ; 

	INTEGER  shift 241
	.  error

	numbits  goto 273

state 215
	redefinition :  r_NAME 

	NAME  shift 244
	.  error


state 216
	typeattrs :  @ typeattrlist ;_    (55)
	typeattrlist :  typeattrlist ;_@ typeattr 

	@  shift 274
	.  reduce 55


state 217
	typeattr :  a INTEGER_    (58)

	.  reduce 58


state 218
	typeattr :  s INTEGER_    (59)

	.  reduce 59


state 219
	typeattr :  p INTEGER_    (60)

	.  reduce 60


state 220
	typeid :  ( INTEGER , INTEGER_) 
	typeid :  ( INTEGER , INTEGER_) = typedef 
	typeid :  ( INTEGER , INTEGER_) typeattrs typedef 

	)  shift 275
	.  error


state 221
	constant :  e typeid ,_ordvalue 

	INTEGER  shift 133
	.  error

	ordvalue  goto 276

state 222
	constant :  C REAL ,_REAL 

	REAL  shift 277
	.  error


state 223
	constant :  S typeid ,_numelements , numbits , bitpattern 

	INTEGER  shift 279
	.  error

	numelements  goto 278

state 224
	procedure :  proc , NAME : NAME_    (31)

	.  reduce 31


state 225
	typedef :  b typeid ;_# numbytes 

	#  shift 280
	.  error


state 226
	typedef :  c typeid ;_# numbits 

	#  shift 281
	.  error


state 227
	typedef :  e enumspec ;_    (67)

	.  reduce 67


state 228
	enumlist :  enumlist enum_    (96)

	.  reduce 96


state 229
	enumspec :  typeid :_enumlist 

	NAME  shift 149
	.  error

	enumlist  goto 282
	enum  goto 148

state 230
	enum :  NAME :_ordvalue , # 

	INTEGER  shift 133
	.  error

	ordvalue  goto 283

state 231
	typedef :  g typeid ;_# numbits 

	#  shift 284
	.  error


state 232
	typedef :  i NAME :_NAME ; 
	typedef :  i NAME :_NAME , typeid ; 

	NAME  shift 285
	.  error


state 233
	typedef :  l ; #_    (72)

	.  reduce 72


state 234
	typedef :  m optvbasespec optmultibasespec_typeid : typeid : typeid ; 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 286

state 235
	optmultibasespec :  m_    (139)

	.  reduce 139


state 236
	typedef :  n typeid ;_# numbytes 

	#  shift 287
	.  error


state 237
	typedef :  o NAME ;_    (75)

	.  reduce 75


state 238
	typedef :  o NAME ,_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 288

state 239
	typedef :  z typeid ;_# numbytes 

	#  shift 289
	.  error


state 240
	usage :  picstoragetype numbits_, editdescription , picsize ; 
	usage :  picstoragetype numbits_, editdescription , picsize , # condition ; 

	,  shift 290
	.  error


state 241
	numbits :  INTEGER_    (19)

	.  reduce 19


state 242
	usage :  redefinition picstoragetype_numbits , editdescription , picsize ; 
	usage :  redefinition picstoragetype_numbits , editdescription , picsize , # condition ; 

	INTEGER  shift 241
	.  error

	numbits  goto 291

state 243
	picstoragetype :  r_    (250)

	.  reduce 250


state 244
	redefinition :  r NAME_    (232)

	.  reduce 232


state 245
	typedef :  I numbytes ;_# picsize 

	#  shift 292
	.  error


state 246
	typedef :  K cobolfiledesc ;_    (81)

	.  reduce 81


state 247
	cobolfiledesc :  organization accessmethod_numbytes 

	INTEGER  shift 184
	.  error

	numbytes  goto 293

state 248
	accessmethod :  d_    (275)

	.  reduce 275


state 249
	accessmethod :  o_    (276)

	.  reduce 276


state 250
	accessmethod :  r_    (277)

	.  reduce 277


state 251
	accessmethod :  s_    (278)

	.  reduce 278


state 252
	typedef :  M typeid ;_# bound 

	#  shift 294
	.  error


state 253
	array :  a typeid ;_# typeid 

	#  shift 295
	.  error


state 254
	array :  D INTEGER ,_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 296

state 255
	array :  E INTEGER ,_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 297

state 256
	array :  O INTEGER ,_typeid 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 298

state 257
	array :  P typeid ;_# typeid 

	#  shift 299
	.  error


state 258
	subrange :  r typeid ;_# bound ; # bound 

	#  shift 300
	.  error


state 259
	proceduretype :  f typeid ;_    (113)

	.  reduce 113


state 260
	proceduretype :  f typeid ,_numparams ; tparamlist ; 

	INTEGER  shift 205
	.  error

	numparams  goto 301

state 261
	proceduretype :  p numparams ;_tparamlist ; 

	INTEGER  shift 38
	(  shift 39
	.  error

	typeid  goto 304
	tparamlist  goto 302
	tparam  goto 303

262: shift/reduce conflict (shift 308, red'n 122) on NAME
262: shift/reduce conflict (shift 309, red'n 122) on :
state 262
	proceduretype :  R numparams ;_namedtparamlist 
	namedtparamlist : _    (122)

	NAME  shift 308
	:  shift 309
	.  reduce 122

	namedtparamlist  goto 305
	namedtplist  goto 306
	namedtparam  goto 307

state 263
	proceduretype :  F typeid ,_numparams ; namedtparamlist ; 

	INTEGER  shift 205
	.  error

	numparams  goto 310

state 264
	record :  s numbytes #_fieldlist ; 

	NAME  shift 313
	.  error

	fieldlist  goto 311
	field  goto 312

state 265
	record :  u numbytes #_fieldlist ; 

	NAME  shift 313
	.  error

	fieldlist  goto 314
	field  goto 312

state 266
	record :  v numbytes #_fieldlist variantpart ; 

	NAME  shift 313
	.  error

	fieldlist  goto 315
	field  goto 312

state 267
	record :  Y numbytes classkey_optpbv optbasespeclist ( extendedfieldlist optnameresolutionlist ; 
	optpbv : _    (140)

	V  shift 317
	.  reduce 140

	optpbv  goto 316

state 268
	classkey :  s_    (142)

	.  reduce 142


state 269
	classkey :  u_    (143)

	.  reduce 143


state 270
	classkey :  c_    (144)

	.  reduce 144


state 271
	record :  G redefinition ,_n numbits # fieldlist ; 
	record :  G redefinition ,_c numbits # condfieldlist ; 

	c  shift 319
	n  shift 318
	.  error


state 272
	record :  G n numbits_fieldlist ; 

	NAME  shift 313
	.  error

	fieldlist  goto 320
	field  goto 312

273: shift/reduce conflict (shift 313, red'n 225) on NAME
state 273
	record :  G c numbits_condfieldlist ; 
	conditions : _    (225)

	NAME  shift 313
	.  reduce 225

	fieldlist  goto 323
	condfieldlist  goto 321
	field  goto 312
	conditions  goto 322

state 274
	typeattrlist :  typeattrlist ; @_typeattr 

	error  shift 129
	s  shift 126
	a  shift 125
	p  shift 127
	P  shift 128
	.  error

	typeattr  goto 324

state 275
	typeid :  ( INTEGER , INTEGER )_    (52)
	typeid :  ( INTEGER , INTEGER )_= typedef 
	typeid :  ( INTEGER , INTEGER )_typeattrs typedef 

	=  shift 325
	@  shift 64
	.  reduce 52

	typeattrs  goto 326

state 276
	constant :  e typeid , ordvalue_    (11)

	.  reduce 11


state 277
	constant :  C REAL , REAL_    (15)

	.  reduce 15


state 278
	constant :  S typeid , numelements_, numbits , bitpattern 

	,  shift 327
	.  error


state 279
	numelements :  INTEGER_    (18)

	.  reduce 18


state 280
	typedef :  b typeid ; #_numbytes 

	INTEGER  shift 184
	.  error

	numbytes  goto 328

state 281
	typedef :  c typeid ; #_numbits 

	INTEGER  shift 241
	.  error

	numbits  goto 329

state 282
	enumspec :  typeid : enumlist_    (94)
	enumlist :  enumlist_enum 

	NAME  shift 149
	.  reduce 94

	enum  goto 228

state 283
	enum :  NAME : ordvalue_, # 

	,  shift 330
	.  error


state 284
	typedef :  g typeid ; #_numbits 

	INTEGER  shift 241
	.  error

	numbits  goto 331

state 285
	typedef :  i NAME : NAME_; 
	typedef :  i NAME : NAME_, typeid ; 

	;  shift 332
	,  shift 333
	.  error


state 286
	typedef :  m optvbasespec optmultibasespec typeid_: typeid : typeid ; 

	:  shift 334
	.  error


state 287
	typedef :  n typeid ; #_numbytes 

	INTEGER  shift 184
	.  error

	numbytes  goto 335

state 288
	typedef :  o NAME , typeid_    (76)

	.  reduce 76


state 289
	typedef :  z typeid ; #_numbytes 

	INTEGER  shift 184
	.  error

	numbytes  goto 336

state 290
	usage :  picstoragetype numbits ,_editdescription , picsize ; 
	usage :  picstoragetype numbits ,_editdescription , picsize , # condition ; 

	INTEGER  shift 339
	STRING  shift 338
	.  error

	editdescription  goto 337

state 291
	usage :  redefinition picstoragetype numbits_, editdescription , picsize ; 
	usage :  redefinition picstoragetype numbits_, editdescription , picsize , # condition ; 

	,  shift 340
	.  error


state 292
	typedef :  I numbytes ; #_picsize 

	INTEGER  shift 342
	.  error

	picsize  goto 341

state 293
	cobolfiledesc :  organization accessmethod numbytes_    (270)

	.  reduce 270

